documented auth service, re-doc cart and order service to read api key
